$Id: History,v 1.32 2002-05-29 10:07:03 dressel Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
May   29, 2002  M.Dressel internal-2-transport-V04-00-05
--------------------------------------------------------
- bug fix in G4PImportanceWWindowScoreManager.cc
  and G4ParallelImportanceManager.hh.

May   24, 2002  M.Dressel internal-1-transport-V04-00-05
-------------------------
- Change in G4VProcessPlacer and G4ProcessPlacer: add member function
  RemoveProcess to properly remove a process.
- Add classes for wieght window biasing.


May   02, 2002  M.Dressel 
-------------------------
- Change in G4ProcessPlacer: set process vector via process manager not 
  directly. 
- Change in G4ParallelTranport: use StartTracking to signal inital step.
  This should help to locate "suspended" tracks.

April 24, 2002  G.Cosmo - transport-V04-00-05
-----------------------
- Added G4DEBUG_TRANSPORT flag in GNUmakefile and (on suggestionh of
  J.Apostolakis) replaced to G4VERBOSE in G4Transportation::PostStepDoIt()
  for extra-check on volume boundary.
  Issues addressed by problem report #130 should now be resolved.

April 10, 2002  M.Dressel - transport-V04-00-04
-------------------------