@@ -1,4 +1,4 @@
-$Id: History,v 1.32 2002-05-29 10:07:03 dressel Exp $
+$Id: History,v 1.33 2002-05-30 11:16:20 dressel Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,11 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+May   30, 2002  M.Dressel internal-3-transport-V04-00-05
+--------------------------------------------------------
+- changes in Importance Manager constructors, G4ImportanceAlgorithm as 
+  pointer
+
 May   29, 2002  M.Dressel internal-2-transport-V04-00-05
 --------------------------------------------------------
 - bug fix in G4PImportanceWWindowScoreManager.cc
